ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@And([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Test\"), EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).simplify()"
---
And(
    [
        WithComponent(
            "ecsdb::Test",
        ),
        EntityId(
            42,
        ),
    ],
)
