ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@And([WithoutComponent("ecsdb::C")]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithoutComponent(\"ecsdb::C\")]).simplify()"
---
And(
    [
        WithoutComponent(
            "ecsdb::C",
        ),
    ],
)
