ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@Or([WithComponent("ecsdb::A"), WithComponent("ecsdb::B")]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::A\"), WithComponent(\"ecsdb::B\")]).simplify()"
---
Or(
    [
        WithComponent(
            "ecsdb::A",
        ),
        WithComponent(
            "ecsdb::B",
        ),
    ],
)
