ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@Or([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::Test\"), EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).simplify()"
---
Or(
    [
        WithComponent(
            "ecsdb::Test",
        ),
        EntityId(
            42,
        ),
    ],
)
