ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@WithComponentData("ecsdb::Test", Null).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "WithComponentData(\"ecsdb::Test\", Null).simplify()"
---
WithComponentData(
    "ecsdb::Test",
    Null,
)
